integ-tests/tests/snapshots/parser__datetimes__tz_neg.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ tz_neg:1:6
  │
1 │ tz = 2016-09-09T09:09:09.123456789-02:00
  │      ^^^^^^^^^^^^^ unable to parse number


